# Troygrade-for-desktop

./: LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
src/: App.jsx  App.tsx  index.css  index.html  main.jsx  main.tsx  splashscreen.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/videos/: background_ambient.webm
src/components/BinFileReader/components/: ReadBin.jsx
src/components/FileHandlingSection/: index.tsx
src/components/FileHandlingSection/components/: CodeEditor.tsx  Handlers.tsx
src/components/Globals/: Checkbox.tsx  DefaultButton.tsx  DropdownMenu.tsx  Icons.tsx  Input.tsx  Modal.tsx  Roster.tsx  Select.tsx  Sonner.tsx  Toast.tsx  Toaster.tsx  Tooltip.tsx  use-toast.tsx
src/components/Globals/styles/: defaultButton.css  modal.css  tooltip.css
src/components/SideBar/: index.tsx
src/components/SideBar/components/: Actions.tsx  FileList.tsx  Filter.tsx  Footer.tsx  Header.tsx
src/components/TroybinConverter/: dictionary.jsx
src/components/TroybinMigrationTool/: Main.jsx
src/components/WindowBar/: index.css  index.tsx
src/lib/: handlers.ts
src/lib/BinFileReader/: Main.js
src/lib/TroybinConverter/: Main.js
src/lib/TroybinMigrationTool/: Main.js
src/redux/: store.ts
src/redux/actions/: handleActions.ts
src/redux/reducers/: appSlice.ts  handleSlice.ts
src/types/: types.ts
src/windows/: App.tsx  Code.tsx  CodeWindow.jsx  ConvertModal.jsx  Help.tsx  convertModal.html  help.css
src/windows/components/: CloseDialogButton.jsx  DialogButton.jsx
test/: Ryze_DarkCrystal_Death_Converted.txt  Ryze_DarkCrystal_Glow_Converted.txt
(+87 files in other folders)
