[package]
name = "troygrade"
version = "0.0.2"
description = "Troygrade version for desktop"
authors = ["Tássio", "Leischii"]
license-file = "LICENSE"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "window-show", "window-unmaximize", "window-unminimize", "window-minimize", "window-maximize", "window-hide", "window-start-dragging", "window-close", "dialog-save", "fs-write-file", "window-create", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
