[package]
name = "troygrade-desktop"
version = "0.0.3"
description = "Troygrade version for desktop"
authors = ["Tasssiooo", "Leischii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "fs-read-file", "window-create", "fs-write-file", "dialog-save", "dialog-open", "window-close", "window-hide", "window-show", "window-minimize", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
